--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ social_preview_image: # string, local or CORS resources
 # boolean type, the global switch for TOC in posts.
 toc: true
 
-comments: true
+comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
   provider: # [disqus | utterances | giscus]
   # The provider options are as follows:
@@ -199,7 +199,7 @@ compress_html:
   clippings: all
   comments: all
   endings: all
-  profile: true
+  profile: false
   blanklines: false
   ignore:
     envs: [development]
